err/torweb-for-3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/torweb'...
Compiling './lib/python3.5/site-packages/torweb/command.py'...
***   File "./lib/python3.5/site-packages/torweb/command.py", line 31
    print "%s\t\t\t%s(%s)"%(spec.regex.pattern, spec.handler_class, spec.kwargs)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/config.py'...
***   File "./lib/python3.5/site-packages/torweb/config.py", line 154
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/torweb/datastructure.py'...
***   File "./lib/python3.5/site-packages/torweb/datastructure.py", line 337
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torweb/lib'...
Listing './lib/python3.5/site-packages/torweb/lib/soaplib'...
Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/easy_client.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/easy_client.py", line 141
    print et.tostring(echoInteger.to_xml(echoInteger,'echoInteger'))
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torweb/lib/soaplib/ext'...
Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/ext/wsdl2py.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/ext/wsdl2py.py", line 44
    print _types
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/torweb/lib/soaplib/serializers'...
Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/serializers/primitive.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/serializers/primitive.py", line 48
    tz_hr, tz_min = [int(match.group(x)) for x in "tz_hr", "tz_min"]
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/service.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/service.py", line 43
    except IndexError,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/soap.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/soap.py", line 38
    print self.ns
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/torweb/lib/soaplib/util'...
Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/wsgi.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/wsgi.py", line 344
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/lib/soaplib/wsgi_soap.py'...
***   File "./lib/python3.5/site-packages/torweb/lib/soaplib/wsgi_soap.py", line 25
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/torweb/script.py'...
***   File "./lib/python3.5/site-packages/torweb/script.py", line 135
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/sessions.py'...
***   File "./lib/python3.5/site-packages/torweb/sessions.py", line 308
    print '%s:%s' % (self.options['key_prefix'], sid)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/soaphandler.py'...
***   File "./lib/python3.5/site-packages/torweb/soaphandler.py", line 30
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/torweb/utils'...
Compiling './lib/python3.5/site-packages/torweb/utils/imagecaptcha.py'...
***   File "./lib/python3.5/site-packages/torweb/utils/imagecaptcha.py", line 112
    print captcha.gen()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/utils/memcache.py'...
***   File "./lib/python3.5/site-packages/torweb/utils/memcache.py", line 334
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torweb/utils/start_app.py'...
***   File "./lib/python3.5/site-packages/torweb/utils/start_app.py", line 15
    print "start_path:%s" % start_path
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/torweb_for_3-0.1.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
